--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "deploy": "npm run build && npm run export"
   },
   "author": "",
   "dependencies": {
@@ -14,6 +16,7 @@
     "bootstrap": "^4.3.1",
     "next": "^9.0.0",
     "node-sass": "^4.12.0",
+    "nuka-carousel": "^4.5.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-transition-group": "^4.2.1"
