--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.12.0",
     "nuka-carousel": "^4.5.9",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-transition-group": "^4.2.1"
   }
